@@ -1,3 +1,8 @@
+2007-06-26  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclBasic.c (TclEvalEx):	Moved some arrays from the
+	C stack to the Tcl stack.
+
 2007-06-26  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclVar.c (UnsetVarStruct): more streamlining.
